fix burger menu navigation on small screens & add arrow for current section

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -310,6 +310,23 @@ a {
   display: none;
 }
 
+.nav-burger-item-wrap {
+  display: flex !important;
+  justify-content: left;
+  align-items: center;
+}
+
+.nav-burger-item {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-right: 10px;
+}
+
+.nav-burger-inactive-item {
+  visibility: hidden;
+}
+
 /* main page burger menu styles */
 
 /* Position and sizing of burger button */
